--- a/app/src/main/res/layout/fav_layout.xml
+++ b/app/src/main/res/layout/fav_layout.xml
@@ -28,7 +28,7 @@
             app:layout_anchorGravity="right" />
 
 
-        <com.google.android.gms.ads.AdView
+       <!-- <com.google.android.gms.ads.AdView
 
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             ads:adSize="SMART_BANNER"
             ads:adUnitId="@string/banner_id">
-        </com.google.android.gms.ads.AdView>
+        </com.google.android.gms.ads.AdView>-->
 
     </LinearLayout>
 
